# QuestPDF.Native

./: .gitignore  LICENSE  README.md  _codeql_detected_source_root
.github/workflows/: build_musl.yml  build_new_platforms.yml  build_questpdf_skia.yml  build_questpdf_skia_ubuntu_qemu.yml  build_questpdf_skia_wasm.yml  build_skia_new_platforms.yml  build_with_qpdf.yml  dotnet_setup_test.yml
managed/: NativeSkia.sln
managed/NativeSkia/: NativeSkia.csproj  SkBitmap.cs  SkCanvas.cs  SkData.cs  SkDocument.cs  SkDrawable.cs  SkImage.cs  SkNativeDependencyCompatibilityChecker.cs  SkNativeDependencyProvider.cs  SkPaint.cs  SkPdfDocument.cs  SkPicture.cs  SkPictureRecorder.cs  SkResourceProvider.cs  SkSvgCanvas.cs  SkSvgImage.cs  SkText.cs  SkWriteStream.cs  SkXpsDocument.cs  SkiaAPI.cs  Utf8StringMarshaller.cs
managed/NativeSkia.Tests/: BitmapTests.cs  CanvasTests.cs  DataTests.cs  Helpers.cs  ImageTests.cs  NativeDependencyCompatibilityCheckerTests.cs  NativeSkia.Tests.csproj  ParagraphTests.cs  PdfDocumentTests.cs  PictureRecorderTests.cs  SvgCanvasTests.cs  SvgImageTests.cs  TestFixture.cs  TestHelpers.cs  TestSetUp.cs
managed/NativeSkia.Tests/Input/: OFL.txt
managed/NativeSkia/Text/: SkFontCollection.cs  SkFontFeature.cs  SkFontManager.cs  SkParagraph.cs  SkParagraphBuilder.cs  SkTextStyle.cs  SkTypeface.cs  SkTypefaceProvider.cs  SkUnicode.cs
native/: CMakeLists.txt  ubuntu18_install_clang.sh
native/_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake
native/src/: bitmap.cpp  canvas.cpp  compatibility.cpp  data.cpp  document.cpp  drawable.cpp  export.h  image.cpp  paint.cpp  pdf.cpp  pdfTag.cpp  picture.cpp  pictureRecorder.cpp  resourceProvider.cpp  stream.cpp  svg.cpp  svgCanvas.cpp  xps.cpp
native/src/text/: fontCollection.cpp  fontManager.cpp  paragraph.cpp  paragraphBuilder.cpp  textStyle.cpp  typeface.cpp  typefaceFontProvider.cpp  unicode.cpp
patches/: add_support_for_painting_specific_lines_in_skparagraph.patch  add_support_for_selecting_pdf_standard_compliance_levels.patch  fix_line_height_calculation_by_removing_rounding_text_run_height.patch  fix_support_with_pdfa1_by_calculating_font_cidset.patch  fix_text_underline_position_by_changing_fallback_value.patch  fix_win86_build_by_removing_hardcoded_winsdk_path.patch  improve-support-for-semantic-links.patch  improve_support_for_semantic_links.patch  support_pdfa1_font_cidset_generation.patch  support_pdfa1_image_icc2_color_profile.patch  update_to_pdfa_3b.patch
